--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,16 +3,17 @@
     justify-content: space-between;
     padding: 10px;
     align-items: center;
-    background-color: whitesmoke;
+    background-color: #2192b8;
     position: relative;
+    color: whitesmoke
 }
 
 .fa-home {
     font-size: 30px;
-    color: black
+    color: whitesmoke
 }
 
 .fa-home:hover {
-    color: purple;
+    color: lightgray;
     cursor: pointer;
 }
