--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 a:hover h1, a:hover p {
-  color: purple;
+  color: lightgray;
 }
 
 .beta {
